--- a/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,12 +1,11 @@
 ﻿@page
 @model ResetPasswordModel
 @{
-    ViewData["Title"] = "Reset password";
+    ViewData["Title"] = "Đặt lại mật khẩu";
 }
 
 <h1>@ViewData["Title"]</h1>
-<h4>Reset your password.</h4>
-<hr />
+
 <div class="row">
     <div class="col-md-4">
         <form method="post">
