--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,9 +8,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Tạo tài khoản mới.</h4>
-            <hr />
+        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">           
             @*<div asp-validation-summary="All" class="text-danger"></div>*@ @*hien tat ca loi*@
             <div class="form-group">
                 <label asp-for="Input.UserName"></label>
@@ -32,12 +30,12 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-primary">Đăng ký</button>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h4>Google, Twiiter, Facebook</h4>
+            <h4>Đăng ký với các dịch vụ</h4>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
@@ -55,7 +53,7 @@
                             <p>
                                 @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    <button type="submit" class="btn btn-danger" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">Đăng ký với @provider.DisplayName</button>
                                 }
                             </p>
                         </div>
